--- a/css/home.css
+++ b/css/home.css
@@ -442,13 +442,15 @@ body .right-container .inventory-div .tiles-div .function-div .add-to-cart-btn{
     align-items: center;
 }
 
-#modal-place-order .modal-content .modal-header{
+#modal-place-order .modal-content .modal-header,
+#modal-notif .modal-content .modal-header{
     width: 100%;
     height: 50px;
     background: #D84315;
 }
 
-#modal-place-order .modal-content .modal-header h5{
+#modal-place-order .modal-content .modal-header h5,
+#modal-notif .modal-content .modal-header h5{
     color:white;
     font-weight: 600;
 }
@@ -467,15 +469,10 @@ body .right-container .inventory-div .tiles-div .function-div .add-to-cart-btn{
 #modal-place-order .modal-content #modal-body-incoming #cart-table thead tr th{
     background: #D9D9D9;
     text-align: center;
-}
-
-#modal-place-order .modal-content #modal-body-incoming #cart-table thead tr th{
     height: 40px;
+    font-weight: 900;
 }
 
-#modal-place-order .modal-content #modal-body-incoming #cart-table tbody tr{
-    /* box-shadow: rgb(253, 254, 254) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset; */
-}
 
 #modal-place-order .modal-content #modal-body-incoming #cart-table tbody tr:nth-child(even){
     background: #F2F2F2;
@@ -484,9 +481,37 @@ body .right-container .inventory-div .tiles-div .function-div .add-to-cart-btn{
 #modal-place-order .modal-content #modal-body-incoming #cart-table tbody tr td{
     text-align: center;
     height: 40px;
+    font-size: 0.9rem;
+    font-weight: 600;
+
+    /* border:1px solid red; */
 }
 
-#modal-place-order .modal-content #modal-body-incoming #cart-table tbody tr td .quantity-input{
+#modal-place-order .modal-content #modal-body-incoming #cart-table tbody tr .item-id-td{
+    width: 10%;
+}
+
+#modal-place-order .modal-content #modal-body-incoming #cart-table tbody tr .item-name-td{
+    width: 30%;
+}
+
+#modal-place-order .modal-content #modal-body-incoming #cart-table tbody tr .item-price-td{
+    width: 13%;
+}
+
+#modal-place-order .modal-content #modal-body-incoming #cart-table tbody tr .item-quantity-td{
+    width: 14%;
+}
+
+#modal-place-order .modal-content #modal-body-incoming #cart-table tbody tr .item-subtotal-td{
+    width: 13%;
+}
+
+#modal-place-order .modal-content #modal-body-incoming #cart-table tbody tr .action-btn-td{
+    width: 20%;
+}
+
+#modal-place-order .modal-content #modal-body-incoming #cart-table tbody tr td .item-quantity-span{
     width: 50px;
     height: 30px;
     border:none;
@@ -496,6 +521,13 @@ body .right-container .inventory-div .tiles-div .function-div .add-to-cart-btn{
     background: transparent;
     border-radius: 5px;
     outline:none;
+}
+
+
+#modal-place-order .modal-content #modal-body-incoming #cart-table tbody tr .action-btn-td .action-btn-div .update-item-btn{
+    opacity: 0.5;
+    pointer-events: none;
+
 }
 
 #modal-place-order .modal-content .modal-footer{
@@ -523,4 +555,14 @@ body .right-container .inventory-div .tiles-div .function-div .add-to-cart-btn{
 #modal-place-order .modal-content .modal-footer button:nth-child(1){
     background: #B51E1A;
     width:100px;
+}
+
+#modal-notif .modal-content .modal-footer button{
+    background: #007bff;
+    border:none;
+    padding:7px;
+    color:white;
+    border-radius: 5px;
+    font-size: 0.9rem;
+    font-weight: bold;
 }
