--- a/css/incoming_order.css
+++ b/css/incoming_order.css
@@ -185,6 +185,34 @@ body .right-container .table-div{
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
+body .right-container .table-div .filter-div{
+    display:flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+    gap:10px;
+    margin-bottom: 10px;
+}
+
+body .right-container .table-div .filter-div button{
+    border:none;
+    border-radius: 3px;
+    padding:5px;
+    font-size: 0.8rem;
+    width:70px;
+}
+
+body .right-container .table-div .filter-div #rejected-btn{
+    background: #ba3a13; 
+    color:white;
+    /* db3545 */
+}
+
+body .right-container .table-div .filter-div #approved-btn{
+    background: #ba3a13; 
+    color:white;
+}
+
 body .right-container .table-div #cart-table{
     width: 100%;
     height: 100%;
@@ -213,6 +241,28 @@ body .right-container .table-div #cart-table tbody tr td .view-request-span:hove
 }
 
 /*  */
+#modal-notif .modal-content .modal-header{
+    width: 100%;
+    height: 50px;
+    background: #D84315;
+}
+
+#modal-notif .modal-content .modal-header h5{
+    color:white;
+    font-weight: 600;
+}
+
+
+#modal-notif .modal-content .modal-footer button{
+    background: #007bff;
+    border:none;
+    padding:7px;
+    color:white;
+    border-radius: 5px;
+    font-size: 0.9rem;
+    font-weight: bold;
+}
+
 #modal-view-request .modal-content{
     width:100%;
 
