--- a/css/imiss_ppmp.css
+++ b/css/imiss_ppmp.css
@@ -266,6 +266,27 @@ body .right-container .table-div #cart-table tbody tr:last-child{
     z-index: 2; /* Ensures it's above other rows */
 }
 
+#modal-notif .modal-content .modal-header{
+    width: 100%;
+    height: 50px;
+    background: #D84315;
+}
+
+#modal-notif .modal-content .modal-header h5{
+    color:white;
+    font-weight: 600;
+}
+
+
+#modal-notif .modal-content .modal-footer button{
+    background: #007bff;
+    border:none;
+    padding:7px;
+    color:white;
+    border-radius: 5px;
+    font-size: 0.9rem;
+    font-weight: bold;
+}
 
 .item-quantity-draft{
     width:40px !important;
@@ -291,6 +312,10 @@ body .right-container .table-div #cart-table tbody tr:last-child{
     color:white;
     visibility:hidden;
     background: #28a645;
+}
+
+.order-id-li{
+    display:none;
 }
 
 
