--- a/css/incoming_order.css
+++ b/css/incoming_order.css
@@ -202,18 +202,32 @@ body .right-container .table-div .filter-div button{
     width:70px;
 }
 
-body .right-container .table-div .filter-div #rejected-btn{
+
+body .right-container .table-div .filter-div button{
     background: #ba3a13; 
     color:white;
-    /* db3545 */
+    font-weight: 600;
+    opacity: 0.5;
 }
 
-body .right-container .table-div .filter-div #approved-btn{
-    background: #ba3a13; 
-    color:white;
+body .right-container .table-div .filter-div #pending-btn{
+    background: #ba3a13;
+    opacity: 1;
 }
 
-body .right-container .table-div #cart-table{
+body .right-container .table-div .filter-div button:hover{
+    background: #e95b2f;
+    opacity: 1;
+}
+
+body .right-container .table-div .table-container{
+    width: 100%;
+    height: 550px;
+    overflow-y: scroll !important;
+    overflow-x: hidden;
+}
+
+body .right-container .table-div .table-container #cart-table{
     width: 100%;
     height: 100%;
     text-align: center !important;
@@ -221,25 +235,31 @@ body .right-container .table-div #cart-table{
 }
 
 /* D9D9D9 */
-body .right-container .table-div #cart-table thead tr{
+body .right-container .table-div .table-container #cart-table thead tr{
     background: #D9D9D9;
 }
 
-body .right-container .table-div #cart-table thead tr th{
+body .right-container .table-div .table-container #cart-table thead tr th{
     text-align: center;
 }
 
-body .right-container .table-div #cart-table tbody tr td .view-request-span{
+body .right-container .table-div .table-container #cart-table tbody tr td .view-request-span{
     /* color:red; */
     text-decoration: underline;
     cursor: pointer;
     font-weight: 600;
 }
 
-body .right-container .table-div #cart-table tbody tr td .view-request-span:hover{
+body .right-container .table-div .table-container #cart-table tbody tr td .view-request-span:hover{
     color:#f24f1d;
 }
 
+/* span-status-incoming */
+body .right-container .table-div .table-container #cart-table tbody tr td .span-status-incoming{
+    padding:5px;
+    font-weight: 600;
+    border-radius: 5px;
+}
 /*  */
 #modal-notif .modal-content .modal-header{
     width: 100%;
@@ -285,8 +305,9 @@ body .right-container .table-div #cart-table tbody tr td .view-request-span:hove
 
 #modal-view-request .modal-content #modal-body-incoming{
     width: 95%;
-    height: auto;
+    height: 600px;
     margin-top:15px;
+    overflow: scroll;
 }
 
 #modal-view-request #cart-table-request{
@@ -398,3 +419,8 @@ body .right-container .table-div #cart-table tbody tr td .view-request-span:hove
     width:120px;
 }
 
+@media only screen and (max-height: 800px){
+    body .right-container .table-div .table-container{
+        height: 400px;
+    }
+}
