--- a/css/item_distribution.css
+++ b/css/item_distribution.css
@@ -14,7 +14,6 @@
     flex-direction: row !important;
     justify-content: center !important;
     align-items: center !important;
-
     
 }
 
@@ -42,7 +41,6 @@
 
 ::-webkit-scrollbar {
     width: 8px; 
-    height: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -215,16 +213,20 @@ body .right-container{
 }
 
 body .right-container .table-div{
-    width:95%;
+    width:90%;
     height: 70%;
     padding:20px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    overflow: scroll;
-
-    position: relative;
 }
 
-body .right-container .table-div #cart-table{
+body .right-container .table-div .table-container{
+    width: 100%;
+    height: 550px;
+    overflow-y: scroll !important;
+    overflow-x: hidden;
+}
+
+body .right-container .table-div .table-container #cart-table{
     width: 100%;
     height: 100%;
     text-align: center !important;
@@ -232,75 +234,53 @@ body .right-container .table-div #cart-table{
 }
 
 /* D9D9D9 */
-body .right-container .table-div #cart-table thead tr{
+body .right-container .table-div .table-container #cart-table thead tr{
     background: #D9D9D9;
+    width: 100%;
 }
 
-body .right-container .table-div #cart-table thead tr th{
+body .right-container .table-div .table-container #cart-table thead tr th{
     text-align: center;
-    border-right:2px solid #999999;
-    font-size: 0.8rem;
 }
 
-body .right-container .table-div #cart-table thead tr th:nth-child(1){
-    border-left:2px solid #999999;
+body .right-container .table-div .table-container #cart-table tbody tr{
+    width: 100%;
 }
 
-body .right-container .table-div #cart-table thead tr #quarterly-th{
-    border:none;
+body .right-container .table-div .table-container #cart-table tbody tr td{
+    border-bottom:2px solid #999999;
+}
+
+body .right-container .table-div .table-container #cart-table tbody tr td:nth-child(1){
+    width: 60%;
+    border-right:2px solid #D9D9D9;
+}
+
+body .right-container .table-div .table-container #cart-table tbody tr td:nth-child(2){
+    width: 30%;
+    border-right:2px solid #D9D9D9;
+}
+
+body .right-container .table-div .table-container #cart-table tbody tr td:nth-child(3){
+    width: 10%;
 }
 
 
+body .right-container .table-div .table-container #cart-table tbody tr td .end-users-div .end-user-sub-div{
+    width: 100%;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #D9D9D9;
+}
 
-/* body .right-container .table-div #cart-table tbody .quarterly-td,
-body .right-container .table-div #cart-table tbody .monthly-td{
-    margin:0;
-    padding:0;
-    width: 10px !important;
+/* .item-ppmp-td{
+    width: 500px;
 } */
 
-body .right-container .table-div #cart-table tbody tr td{
-    font-size: 0.8rem;
-    border-right: 2px solid #999999;
-}
-body .right-container .table-div #cart-table tbody tr td:nth-child(1){
-    border-left:2px solid #999990;
-}
 
-/* body .right-container .table-div #cart-table tbody tr .total-quantity-span{
-    border:1px solid red;
-} */
-
-body .right-container .table-div #cart-table tbody tr .item-description-td{
-    width:250px !important;
-}
-
-body .right-container .table-div #cart-table tbody tr td:nth-child(3){
-    position:relative;
-}
-
-body .right-container .table-div #cart-table tbody tr td:nth-child(3) i{
-    position:absolute;
-    bottom:5%;
-    right:5%;
-    font-size: 1rem;
-    cursor: pointer;
-    opacity: 0.3;
-}
-
-body .right-container .table-div #cart-table tbody tr td:nth-child(3) i:hover{
-    opacity: 1;
-}
-
-body .right-container .table-div #cart-table tbody tr:last-child{
-    position: sticky;
-    bottom: -30px;
-    background: #d9d9d9;
-    font-weight: bold;
-    border: 1px solid red !important;
-    z-index: 2; /* Ensures it's above other rows */
-}
-
+/*  */
 #modal-notif .modal-content .modal-header{
     width: 100%;
     height: 50px;
@@ -323,40 +303,8 @@ body .right-container .table-div #cart-table tbody tr:last-child{
     font-weight: bold;
 }
 
-.item-quantity-draft{
-    width:40px !important;
-    text-align: center;
-    outline:none;
-    border-radius: 5px;
-    border:1px solid gray;
-
-    pointer-events: none;
-    border:none;
+@media only screen and (max-height: 800px){
+    body .right-container .table-div .table-container{
+        height: 500px;
+    }
 }
-
-.edit-quantity-draft,
-.save-quantity-draft{
-    background: #ffc108;
-    padding:3px;
-    border:none;
-    width:40px;
-    border-radius: 5px;
-}
-
-.save-quantity-draft{
-    color:white;
-    visibility:hidden;
-    background: #28a645;
-}
-
-.order-id-li{
-    display:none;
-}
-
-
-body .right-container .table-div #cart-table thead tr:nth-child(2) th:nth-child(1){
-    border-left:none;
-}
-
-/* 021025 - 2:50pm */
-
