--- a/css/order_management.css
+++ b/css/order_management.css
@@ -5,6 +5,39 @@
     font-family: Arial, sans-serif;
 }
 
+#bell-notif {
+    color: yellow !important;
+    font-size: 1.5rem !important;
+    animation: ring 1s infinite ease-in-out;
+    position: relative !important;
+    display: flex !important;
+    flex-direction: row !important;
+    justify-content: center !important;
+    align-items: center !important;
+}
+
+/* Hide by default */
+.hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 0.3s ease-in-out;
+}
+
+@keyframes ring {
+    0% { transform: rotate(0deg); }
+    25% { transform: rotate(10deg); }
+    50% { transform: rotate(0deg); }
+    75% { transform: rotate(-10deg); }
+    100% { transform: rotate(0deg); }
+}
+
+@keyframes fade {
+    0% { opacity: 1; }
+    100% { opacity: 0.5; }
+
+}
+
 ::-webkit-scrollbar {
     width: 8px; 
 }
@@ -217,6 +250,15 @@ body .right-container .table-div .filter-div #pending-btn{
 body .right-container .table-div .filter-div button:hover{
     background: #e95b2f;
     opacity: 1;
+}
+
+
+body .right-container .table-div .table-container{
+    width: 100%;
+    height: 620px;
+    overflow-y: scroll !important;
+    overflow-x: hidden;
+
 }
 
 
@@ -441,4 +483,10 @@ body .right-container .table-div #cart-table tbody tr td .imiss-update-span:hove
     color:red;
     font-style: italic;
     font-size: 0.8rem;
+}
+
+@media only screen and (max-height: 800px){
+    body .right-container .table-div .table-container{
+        height: 500px;
+    }
 }
