--- a/index.css
+++ b/index.css
@@ -109,3 +109,25 @@ body .right-container #login-btn{
     font-size: 1.2rem;
     letter-spacing: 1px;
 }
+
+#modal-notif .modal-content .modal-header{
+    width: 100%;
+    height: 50px;
+    background: #D84315;
+}
+
+#modal-notif .modal-content .modal-header h5{
+    color:white;
+    font-weight: 600;
+}
+
+
+#modal-notif .modal-content .modal-footer button{
+    background: #007bff;
+    border:none;
+    padding:7px;
+    color:white;
+    border-radius: 5px;
+    font-size: 0.9rem;
+    font-weight: bold;
+}
