--- a/css/incoming_order.css
+++ b/css/incoming_order.css
@@ -217,6 +217,8 @@ body .right-container{
     justify-content: center;
     align-items: center;
     gap:20px;
+
+    position:relative;   
 }
 
 body .right-container .table-div{
