--- a/css/order_management.css
+++ b/css/order_management.css
@@ -214,6 +214,9 @@ body .right-container{
     justify-content: center;
     align-items: center;
     gap:20px;
+
+    position:relative;   
+
 }
 
 body .right-container .table-div{
