--- a/css/item_distribution.css
+++ b/css/item_distribution.css
@@ -215,6 +215,8 @@ body .right-container{
     justify-content: center;
     align-items: center;
     gap:20px;
+    
+    position:relative;
 }
 
 body .right-container .table-div{
